gitops/apps/workloads/podinfo/overlays/homolog/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
spec:
  tls:
    - hosts:
        - podinfo.homolog.127.0.0.1.nip.io
      secretName: podinfo-tls
  rules:
    - host: podinfo.homolog.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo-stable
                port:
                  number: 9898
